Fix removed align top

--- a/web/sass/_legacy_layout.scss
+++ b/web/sass/_legacy_layout.scss
@@ -38,3 +38,7 @@ div#navigation:hover
     display: none !important;
   }
 }
+
+td, th {
+  vertical-align:top
+}
